# Tdo

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  makefile  rusty-hook.toml  tdo.db
.github/workflows/: homebrew.yml  release.yml  rust.yml
Formula/: tdo.rb
src/: main.rs
src/actions/: mod.rs
src/cli/: actions.rs  mod.rs  utils.rs
src/config/: mod.rs
src/db/: mod.rs  utils.rs
src/renderer/: mod.rs  utils.rs
src/types/: mod.rs  utils.rs
src/utils/: mod.rs
