[package]
name = "tdo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
figlet-rs = "0.1.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
